client/src/components/PostShow.css
.postShow-container {
  width: 100%;
  height: 100%;
  padding: 25px 50px;
  max-width: 800px;
  margin: 0 auto;
}

.show-post {
  width: 100%;
  display: flex;
  padding: 10px 0;
  flex-direction: column;
  justify-content: space-around;
  align-items: space-around; 
}

.show-item {
  padding: 10px 0;
}

.show-date {
  font-size: 15px;
  line-height: 20px;
}

.show-image {
  border: 1px solid black;
  width: 100%;
  /* height: 200px; */
}

/* .show-item p {
  padding: 0 10px;
} */

.show-item-tags {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
}

.postShow-tag {
  background-color: steelblue;
  color: white;
  font-size: 13px;
  line-height: 18px;
  margin: 0 3px;
  border-radius: 3px;
  padding: 5px;
}

.postShow-tagImage {
  width: 15px;
  height: 15px;
  margin: 0 2px;
}

#button-div {
  width: 75%;
}

.space-it {
  margin-right: 20px;
}

.edit {
  padding: 8px 20px;
  font-size: 15px;
  max-width: 100%;
  border-radius: 5px;
  border: none;
  color: #ffffff;
  background-color: rgb(255, 209, 56);
  box-shadow: 3px 3px 3px #d2d2d2;
  opacity: .75;
}

.edit:hover {
  opacity: 1;
  box-shadow: 2px 2px 5px #171717;
}

